add async data manager and change flask to aiohttp
